# kmms_prog_2023

./: .gitignore  README.md  build.bat  run_tests.bat
projects/: CMakeLists.txt
projects/base_theory_p1/: CMakeLists.txt  main.cpp  run_base_theory_p1.bat
projects/base_theory_tasks_p1/: CMakeLists.txt  main.cpp  run_base_theory_tasks_p1.bat
projects/bubble_sort/: CMakeLists.txt  main.cpp  run_bubble_sort.bat
projects/bubble_sort_mf/: CMakeLists.txt  main.cpp  run_bubble_sort_mf.bat
projects/bubble_sort_mf/sortings/: CMakeLists.txt  bubble_sort.cpp
projects/inheritance_examples/: CMakeLists.txt  main.cpp  run_inheritance_examples.bat
projects/may_lessons/: CMakeLists.txt
projects/may_lessons/lyambda/: CMakeLists.txt  main.cpp  run_lyambda.bat
projects/may_lessons/matrix/: CMakeLists.txt  main.cpp  run_matrix.bat
projects/obuchaika/: CMakeLists.txt  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp  run_obuchaika.bat
projects/obuchaika_v2/: CMakeLists.txt  run_obuchaika_v2.bat
projects/obuchaika_v2/src/: CMakeLists.txt  main.cpp
projects/recursion/: CMakeLists.txt  main.cpp  run_recursion.bat
projects/refactoring_and_print/: CMakeLists.txt  initial_code  main.cpp  run_refactoring_and_print.bat
projects/scl/: CMakeLists.txt  Readme.txt
projects/scl/src/: CMakeLists.txt
projects/scl/test/: CMakeLists.txt
projects/unit_test_example/: CMakeLists.txt
projects/unit_test_example/src/: CMakeLists.txt  bubble_sort.hpp
projects/unit_test_example/test/: CMakeLists.txt  test_bubble.cpp
(+77 files in other folders)
